# sectalk

./: .gitignore  Cargo.toml  README.md  bs-config.json  deploy  g  get_web_version  inc_build_num  inc_web_version_patch  package-lock.json  package.json  run_debug_sectalk  run_debug_sectalkd  tailwind.config.js  tsconfig.app.json  vite.config.ts
backup/: main.rs.persist
deployment/nginx-conf/: sectalk.my.to
deployment/sectalkd/: commands  sectalkd.service
dev/: index.css  index.html  index.js
src/: app.tsx  index.html  main.rs
src/client/: Cargo.toml
src/client/src/: lib.rs  main.rs
src/server/: Cargo.toml
src/server/src/: main.rs
websrc/: app.tsx  index.css  index.html  input.css
