[package]
name = "sectalk"
version = "1.0.3"
edition = "2021"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
warp = "0.3.7"
futures = "0.3"
once_cell = "1.21.3"
log = "0.4.27"
env_logger = "0.11.8"
rand_core = { version = "0.9.3", features = ["os_rng"] }
rand_chacha = "0.9.0"
secp256k1 = "0.30.0"
home = "0.5.11"
hex = "0.4.3"

[dependencies.uuid]
version = "1.16.0"
features = ["v4", "fast-rng", "macro-diagnostics"]

[profile.release]
panic = 'abort'
opt-level = 3
