[workspace]
members = ["src/client", "src/server"]
resolver = "3"

[profile.release]
opt-level = 3     # Maximum optimizations
debug = false     # No debug info
strip = true      # Strip symbols
lto = true        # Link time optimization
codegen-units = 1 # Maximize performance
panic = "abort"   # Remove unwind code in release

[profile.dev]
opt-level = 0           # No optimizations for faster compilation
debug = true            # Full debug info
debug-assertions = true
overflow-checks = true
