[package]
name = "sectalk"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
reqwest = "0.12.15"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3.31"
tokio-tungstenite = "0.26.2"
hex = "0.4.3"
secp256k1 = "0.31.0"
zeroize = "1.8.1"
chacha20poly1305 = "0.10.1"
