[package]
name = "sectalk"
version = "0.0.1"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3.31"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
native-tls = "0.2.14"
secp256k1 = { version = "0.31.1", features = ["hashes"] }
zeroize = "1.8.2"
chacha20poly1305 = "0.10.1"
bs58 = "0.5.1"
log = "0.4.29"
env_logger = "0.11.8"
rand_core = { version = "0.9.3", features = ["os_rng"] }
rand_chacha = "0.9.0"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.2"
