[package]
name = "sectalkd"
version = "0.1.6"
edition = "2024"

[dependencies]
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
warp = { version = "0.4.2", features = ["websocket", "server"] }
futures = "0.3"
once_cell = "1.21.3"
log = "0.4.27"
env_logger = "0.11.8"
rand_core = { version = "0.9.3", features = ["os_rng"] }
rand_chacha = "0.9.0"
secp256k1 = "0.31.1"
uuid = { version = "1.16.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
